tests/baselines/reference/declaredClassMergedwithSelf.errors.txt
tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts(1,15): error TS2300: Duplicate identifier 'C1'.
tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts(3,15): error TS2300: Duplicate identifier 'C1'.
tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts(5,15): error TS2300: Duplicate identifier 'C2'.
tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts(7,11): error TS2300: Duplicate identifier 'C2'.
tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts(9,15): error TS2300: Duplicate identifier 'C2'.


==== tests/cases/conformance/classes/classDeclarations/declaredClassMergedwithSelf.ts (5 errors) ====
    declare class C1 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C1'.
    
    declare class C1 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C1'.
    
    declare class C2 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
    interface C2 {}
              ~~
!!! error TS2300: Duplicate identifier 'C2'.
    
    declare class C2 {}
                  ~~
!!! error TS2300: Duplicate identifier 'C2'.